Mon, 05 Jun 2006 15:55:01 +0200 <thp@perli.net>
	* Packages you will need for debian compile (in README)

Sun, 28 May 2006 16:13:38 +0200 <thp@perli.net>
	* Added "only download new podcasts" to TODO list

Mon, 01 May 2006 21:28:24 +0200 <thp@perli.net>
	* Applied patch from Adrien Beaucreux <informancer at web.de>
	  to support "update on startup" option (updates feed cache)
	  (fixes bug #7346)

Fri, 14 Apr 2006 14:40:47 +0200 <thp@perli.net>
	* Commented-out the "eject" call on end of iPod sync for now
	* Fallback to default download dir if not able to create it

Thu, 13 Apr 2006 12:06:50 +0200 <thp@perli.net>
	* Added support for DESTDIR= in Makefile (thanks to Steve for 
	  pointing this out..)

Tue, 11 Apr 2006 18:53:00 +0200 <thp@perli.net>
	* Make directories recursively, more efficient (in libgpodder)

Mon, 10 Apr 2006 18:44:48 +0200 <thp@perli.net>
	* Added "Released" column to available podcasts list

Mon, 10 Apr 2006 09:48:00 +0200 <thp@perli.net>
	* Updated TODO list

Sun, 09 Apr 2006 18:10:54 +0200 <thp@perli.net>
	* Added iPodManager and iPod to libipodsync (D-BUSified)
	* Automatically detect connected iPod, ask if user wants to sync
	* Automatically eject iPod device on sync finish (should be opt.)
	* Python 2.4 is now used instead of Python 2.3 (for D-BUS)
	* Lots of D-BUS magic, still VERY experimental..
	* gPodder SVN will now feature very experimental D-BUS stuff in 
	  the near future, related to iPod, but it should keep working 
	  if you either haven't installed "gpod" or "dbus" for Python2.4
	* Send your RANTS about svn not working to thp@perli.net.. hehe
	* Updated German translation

Sun, 09 Apr 2006 14:10:28 +0200 <thp@perli.net>
	* Enabled podcast flag setting (works with libgpod cvs)
	* Fixed a brainfart of mine -- new localDB could not be created

Sat, 08 Apr 2006 16:39:08 +0200 <thp@perli.net>
	* Save more details in localDB
	* Show more details in podcast window

Sat, 08 Apr 2006 14:39:28 +0200 <thp@perli.net>