@@ -13,4 +13,10 @@ Thanks to all the other patch writers:
   Stylianos Papanastasiou <stelios@dcs.gla.ac.uk> (patch for "downloaded move")
   Ortwin Forster <ortwin@videotron.ca> (patch for saxutils.escape in localdb)
 
+
+Thanks for bug reports go out to:
+
+ Gaim Roitgrund
+
+
 (..and all the others I forgot.. sorry :)
