@@ -1,3 +1,9 @@
+Thu, 08 Jun 2006 23:58:49 +0200 <thp@perli.net>
+	* Fixed a bug where a "&" character in the channels list would 
+	  result in gPodder to crash - thanks to Gaim Roitgrund for 
+	  pointint out that error and providing a nice bug report!
+	* Pushed version and release date
+
 Mon, 05 Jun 2006 15:55:01 +0200 <thp@perli.net>
 	* Packages you will need for debian compile (in README)
 
